--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,16 @@
 
 /* Your CSS Code here. */
+.container{
+	display:flex;
+	background-color:red;
+	align-items: center;
+    justify-content: center;
+	
+	
+}
+.item-1{
+	width:100px;
+	height:100px;
+	background-color:lightblue;
+	
+}
